--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
                 </div>
             </div>
         </div>
+        <div class="advantages" id="solutions">
+            <div class="container">
+                <div class="advantages__item">
+                    <img src="img/advantages1.png" alt="">
+                    <p>A multi disciplinary approach</p>
+                </div>
+                <div class="advantages__item">
+                    <img src="img/advantages2.png" alt="">
+                    <p>Extended network of international connections</p>
+                </div>
+                <div class="advantages__item">
+                    <img src="img/advantages3.png" alt="">
+                    <p>Extended experience with the local ecosystem</p>
+                </div>
+            </div>
 
-    </main>
-    <div class="advantages" id="solutions">
-        <div class="container">
-            <div class="advantages__item">
-                <img src="img/advantages1.svg" alt="">
-                <p>A multi disciplinary approach</p>
-            </div>
-            <div class="advantages__item">
-                <img src="img/advantages2.svg" alt="">
-                <p>Extended network of international connections</p>
-            </div>
-            <div class="advantages__item">
-                <img src="img/advantages3.svg" alt="">
-                <p>Extended experience with the local ecosystem</p>
-            </div>
         </div>
+    </main>
 
-    </div>
     <div class="partners" id="partners">
         <div class="container">
             <h2>Partners</h2>
